css/style.css
/* 
 * ----------------------------------------------
 * - GENERAL STYLINGS -
 * ---------------------------------------------- 
 */

html {
  height: 100%;
  position: relative;
  overflow: hidden;
  max-width: 100%;
  max-height: 100%;
  margin: 0px;
  padding: 0px;
}

body {
  height  : 100%;
  overflow: auto;
  position: relative;
  margin: 0;
  padding: 0;
}

main {
  display: flex;
  flex-direction: row;
  max-width: 100%;
  height: 100%;
  font-family: sans-serif;
	scroll-snap-type: x mandatory;	
	overflow-x: scroll;
	-webkit-overflow-scrolling: touch;
}

h1, h2, h3, p, q, a, span, button, .project-text, #cursor{
  font-family: 'Space Grotesk', sans-serif;
}

h1 {
  font-size: 6vw;
  font-weight: 200;
  color: white;
}

h2 {
  font-size: 4vw;
  font-weight: 500;
  color: #27a594;
}

h3 {
  font-size: 1vw;
}

p, i {
  font-size: 2.3vw;
}


/* 
 * ----------------------------------------------
 * - NAVBAR STYLINGS -
 * ---------------------------------------------- 
 */


#navbar {
  display: none;
}

.fade-in {
	-webkit-animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
	        animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
          animation-delay: 3s;
}

@-webkit-keyframes fade-in {
  0% {
    opacity: 0;
    -webkit-transform: translateY(+100px);
      transform: translateY(+100px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
      transform: translateY(0);
  }
}
@keyframes fade-in {
  0% {
    opacity: 0;
    -webkit-transform: translateY(+100px);
      transform: translateY(+100px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

/* 
 * ----------------------------------------------
 * - GENERAL SECTION STYLINGS -
 * ---------------------------------------------- 
 */

 .section-cards {
  display: block;
  position: relative;
  flex: 1;
  z-index: 1;
  background-color: rgba(63,63,67,0.85);
	min-width: 100vw;
  max-height: 100vh;
	scroll-snap-align: start;
	text-align: center;
}

.section-cards-header {
  text-align: center;
}

.section-cards-header > h1{
  margin: 0;
  padding: 0;
}

/* 
 * ----------------------------------------------
 * - WELCOME SECTION -
 * ---------------------------------------------- 
 */

#backgroundImage {
  position: fixed;
  z-index: 0;
  right: 0;
  bottom: 0;
  width: 100vw; 
  height: 100%;
  background-image: url(../images/profile-picture-background.jpg);
  background-size: cover;
}

#welcome {
  display: flex;
  justify-content: flex-end;
}

#start-overlay {
  position: fixed;
  z-index: 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex: 1;
  width: 100vw;
  height: 100vh;
  /*background-color: rgb(120 120 120 / 50%);*/
  background-color: rgba(63,63,67,0.8);
}

#background-overlay {
  position: fixed;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  flex: 1;
  width: 100vw;
  height: 100vh;
  background-color: rgb(120 120 120 / 70%);
}

#socialSites {
  display: flex;
  flex-direction: column;
  justify-content: end;
  width: 100vw;
  word-break: break-word;
  list-style: none;
  padding: 0;
  margin: 0;
  z-index: 1;
}

#socialSites li {
  display: flex;
  align-items: center;
}

#socialSites a {
  text-align: left;
  font-weight: bolder;
  text-decoration: none;
  color: white;
  text-shadow: 0px 0px 8px rgb(0, 0, 0);
}
#socialSites a:visited{
  color: white;
  text-shadow: 0px 0px 8px rgb(0, 0, 0);
}
#socialSites a:hover{
  color: black;
  text-shadow: 0px 0px 18px #000000;
}
#socialSites a:focus{
  color: white;
  text-shadow: 0px 0px 8px rgb(0, 0, 0);
}

.logo {
  padding: 1em;
  width: 3em;
  height: auto;
  align-self: flex-start;
}

#welcome-headline {
  color: white;
  word-wrap: normal;
  font-weight: 700;
  font-size: 4vw;
  white-space: pre-wrap;
  text-shadow: 0px 0px 8px rgb(0, 0, 0);
}

#cursor {
  color: white;
  word-wrap: normal;
  font-weight: 700;
  font-size: 4vw;
  
}

.blinking-cursor {
    animation: 0.7s blink step-end infinite;
  }
  
  @keyframes blink {
    from, to {
      color: transparent;
      text-shadow: 0;
    }
    50% {
      color: white;
      text-shadow: 0px 0px 8px rgb(0, 0, 0);
    }
}


/* Animation for slide out the overlay */
.slide-to-right {
	-webkit-animation: slide-to-right 1.5s ease-out both 1s;
	        animation: slide-to-right 1.5s ease-out both 1s;
}
 @-webkit-keyframes slide-to-right {
  0% {
    width: 100%;
  }
  100% {
    width: 0vw;
    background-color: rgba(63,63,67,1);
  }
}
@keyframes slide-to-right {
  0% {
    width: 100%;
  }
  100% {
    width: 0vw;
    background-color: rgba(63,63,67,1);
  }
}


/* Animation for fade out the headline text */
.fade-out {
	-webkit-animation: fade-out 1s ease-out forwards;
	        animation: fade-out 1s ease-out forwards;
} 
 @-webkit-keyframes fade-out {
  0% {
  }
  100% {
    opacity: 0;
  }
}
@keyframes fade-out {
  0% {
  }
  100% {
    opacity: 0;
  }
}

/* 
 * ----------------------------------------------
 * - PROFILE SECTION -
 * ---------------------------------------------- 
 */

#profile {
  display: flex;
  flex-direction: column;
}

#profile-section-container {
  display: flex;
  flex:2;
  flex-direction: row;
  align-items: center;
  width: 100vw;
  background-color: white;
}

#profile-picture-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1;
}

#profile-picture {
  width: 25vw;
  height: auto;
}

#about-me-info {
  flex: 1;
  text-align: center;
}

#my-quote {
  flex: 1;
  text-align: center;
}

#interactive-cv {
  display: flex;
  justify-content: center;
  flex:5;
  width: 100vw;
}

#clickable-timeline-container {
  display: flex;
  justify-content: center;
  flex:2;
  width: 100vw;
}

#clickable-timeline {
  display: flex;
  flex-direction: row;
  background-color: #27a594;
  width: 100vw;
  padding: 0;
  margin: 0;
}

.timeline-item, .timeline-link-item {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  background-color: white;
  color: black;
  font-weight: 700;
  list-style-type: none;
  text-decoration: none;
  border: none
}

.timeline-link-item:hover {
  background-color: #27a594;
  outline: 0;
}

.timeline-link-item:focus {
  background-color: #27a594;
  outline: 0;
}


/* Animation of the interactive cv cards */
.flip-card {
  background-color: transparent;
  width: 100%;
  perspective: 1000px;
  display: none;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  -webkit-transition: transform 0.6s;
  transition: transform 0.6s;
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.flip-card:hover .flip-card-inner {
  -webkit-transform: rotate(180deg);
  transform: rotateX(180deg);
}

.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.flip-card-front {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: rgba(63,63,67,1);
  color: white;
}

.flip-card-back {
  background-color: rgba(63,63,67,1);
  color: white;
  -webkit-transform: rotate(180deg);
  transform: rotateX(180deg);
}

.flip-card-back p {
  width: 50%;
  margin: 0 auto;
}




/* 
 * ----------------------------------------------
 * - SKILL SECTION -
 * ---------------------------------------------- 
 */

#skill {
  flex-direction: column;
  align-items: center;
  background-color: rgba(63,63,67,1);
  min-width: 100vw;
}

#it-skills {
  display: grid;
  padding-left: 2vh;
  padding-right: 2vh;
}
.skill-grid-header {
  margin-bottom: 0;
  grid-column: 1 / span 2;
}

.skill-card-grid {
  z-index: 1;
  display: grid;
  justify-content: space-around;
  grid-template-columns: auto auto;
  flex: 1;
}

.skill-grid-item {
  display: flex;
}

#skill-list {
  flex: 1;
  flex-direction: column;
  padding: 0px;
}

.skill-row {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  padding-bottom: 0.3em;
  align-items: flex-end;
}

.skill-text {
  width: 20vw;
  text-align: start;
  font-family: 'Space Grotesk', sans-serif;
  font-size: 3vw;
  color: white;
}

.circle-container{
  z-index: 1;
  position: relative;
  width: 3vw;
  height: 3vw;
  overflow: hidden;
}
.circle-container:after{
  z-index: 1;
  content: '';
  position: absolute;
  left: 0px;
  top: 0px;
  border-radius: 100%;
  width: 2vw;
  height: 2vw;
  box-shadow: 0px 0px 0px 2000px rgba(63,63,67,1);
  border: 1px solid rgb(39, 165, 148);
}

.fill-up-five-circles, .fill-up-four-circles, .fill-up-three-circles, .fill-up-two-circles, .fill-up-one-circle{
  display: flex;
  width: 15vw;
  height: 3vw;
  background: #000000;
  background: linear-gradient(to right, #27a594 50%, transparent 50%) left;
  background-size: 200%;
}

.fill-up-four-circles {
  background: linear-gradient(to right, #27a594 40%, transparent 40%) left;
  background-size: 200%;
}

.fill-up-three-circles {
  background: linear-gradient(to right, #27a594 30%, transparent 30%) left;
  background-size: 200%;
}

.fill-up-two-circles {
  background: linear-gradient(to right, #27a594 20%, transparent 20%) left;
  background-size: 200%;
}

.fill-up-one-circle {
  background: linear-gradient(to right, #27a594 10%, transparent 10%) left;
  background-size: 200%;
}


.circle-animation {
  -webkit-animation: fillUp 1.0s ease-in 0.4s 1;
  animation: fillUp 1.0s ease-in 0.4s 1;
}

/* Animation for skill fill up */
@keyframes fillUp {
  0% {
    background-position: right;
  } 
}








/* 
 * ----------------------------------------------
 * - PROJECT SECTION -
 * ---------------------------------------------- 
 */

#projects {
  display: flex;
  flex-direction: column;
  align-items: center;
}


.projects-grid {
  display: grid;
  grid-template-columns: auto auto auto;
  grid-gap: 1%;
  width: 90vw;
  height: 80vh;
  background-color: transparent;
}
.project-grid-item {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url("../images/exampe-project.jpg");
  background-size: auto 100%;
  background-position: 50%;
}

.project-grid-item-link {
  width: 100%;
  height: 100%;
}

.project-overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(39, 165, 148, 0.8);
  overflow: hidden;
  width: 100%;
  height: 100%;
  transition: .5s ease;
}


.project-grid-item:hover .project-overlay {
  width: 0;
  background-color: rgba(39, 165, 148, 0.1);
}
.project-text {
  color: white;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  white-space: nowrap;
}




/* 
 * ----------------------------------------------
 * - ANIMATIONS -
 * ---------------------------------------------- 
 */

/* Animation for fading in the cards */
.slide-in-fwd-center {
	-webkit-animation: slide-in-fwd-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
          animation: slide-in-fwd-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}
@keyframes slide-in-fwd-center {
  0% {
    -webkit-transform: translateZ(-1400px);
            transform: translateZ(-1400px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateZ(0);
            transform: translateZ(0);
    opacity: 1;
  }
}

